style.css
/* ... */
.modal-container .exit-button:hover {
  background-color: #DC1969;
}
.modal-container .form-container {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
      -ms-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  padding: 64px 36px 46px 40px;
  max-width: 100%;
  width: 550px;
  background-color: #FFFFFF;
  overflow: auto;
}
@media screen and (max-width: 600px) {
  .modal-container .form-container {
    position: static;
    -webkit-transform: none;
        -ms-transform: none;
            transform: none;
    top: 0;
    left: 0;
    width: auto;
    margin: 0 auto;
  }
}
.modal-container .form-container .modal-form h1 {
  text-align: center;
  max-width: 85%;
  font-weight: 900;
  margin: 0 auto;
  margin-bottom: 20px;
}
@media screen and (max-width: 600px) {
  .modal-container .form-container .modal-form h1 {
    font-size: 24px;
    max-width: 100%;
  }
}
.modal-container .form-container .modal-form fieldset {
  border: none;
  margin-bottom: 24px;
}
.modal-container .form-container .modal-form fieldset.two-columns {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  gap: 25px;
}
.modal-container .form-container .modal-form fieldset.two-columns > * {
  -webkit-box-flex: 1;
      -ms-flex: 1;
          flex: 1;
}
@media screen and (max-width: 600px) {
  .modal-container .form-container .modal-form fieldset.two-columns {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
}
.modal-container .form-container .modal-form fieldset label {
  display: block;
  font-weight: 900;
  margin-bottom: 15px;
}
.modal-container .form-container .modal-form fieldset label span {
  color: #EE325C;
}
.modal-container .form-container .modal-form fieldset input {
  font-size: 16px;
  border: none;
  background-color: #EFEFEF;
  width: 100%;
  padding: 18px;
}
.modal-container .form-container .modal-form fieldset input:not([type=tel]):not(#contact-web) {
  color: #EE325C;
  font-weight: 400;
}
.modal-container .form-container .modal-form fieldset input:not([type=tel]):not(#contact-web):focus {
  outline: 2px solid #EE325C;
}
.modal-container .form-container .modal-form fieldset textarea {
  font-size: 16px;
  font-weight: 400;
  color: #080809;
  border: none;
  background-color: #EFEFEF;
  width: 100%;
  padding: 18px;
  font-family: "Mulish";
  max-width: 100%;
  resize: vertical;
}
.modal-container .form-container .modal-form input[type=submit] {
  display: block;
  height: 72px;
  width: 100%;
  font-weight: 900;
  font-size: 20px;
  color: #FFFFFF;
  background-color: #EE325C;
  border: none;
  border-radius: 1vh;
}
.modal-container .form-container .modal-form input[type=submit]:hover {
  background-color: #DC1969;
  -webkit-transition: background-color 0.2s ease-in;
  -o-transition: background-color 0.2s ease-in;
  transition: background-color 0.2s ease-in;
}
.modal-container .form-container .modal-form .form-robot {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  border: 1px solid #D6D8DD;
  border-radius: 1vh;
  padding: 16px;
  margin-top: 20px;
}
.modal-container .form-container .modal-form .form-robot img {
  max-height: 80px;
}
.modal-container .form-container .modal-form .form-robot div {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}
.modal-container .form-container .modal-form .form-robot div input[type=checkbox] {
  height: 36px;
  width: 36px;
}
.modal-container .form-container .modal-form .form-robot div label {
  padding-left: 20px;
}
.modal-container .load-4 {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  visibility: hidden;
}
.modal-container .load-4 .ring-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
      -ms-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  width: 40px;
  height: 40px;
  margin: 0 auto;
  padding: 20px;
  border: 7px dashed #EE325C;
  border-radius: 100%;
  -webkit-animation: loadingD 1.5s 0.3s cubic-bezier(0.17, 0.37, 0.43, 0.67) infinite;
          animation: loadingD 1.5s 0.3s cubic-bezier(0.17, 0.37, 0.43, 0.67) infinite;
}
.modal-container .load-4::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-color: rgba(8, 8, 9, 0.2666666667);
}

@-webkit-keyframes loadingD {
  0% {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg);
  }
  50% {
    -webkit-transform: rotate(180deg);
            transform: rotate(180deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
            transform: rotate(360deg);
  }
}

@keyframes loadingD {
  0% {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg);
  }
  50% {
    -webkit-transform: rotate(180deg);
            transform: rotate(180deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
            transform: rotate(360deg);
  }
}

